cmake_minimum_required(VERSION 3.20)

project(IO)

add_executable(01_fopen 01_fopen.cpp)
add_executable(02_fclose 02_fclose.cpp)
add_executable(03_error 03_error.cpp)
add_executable(04_perror 04_perror.cpp)
add_executable(05_fputc_fgetc 05_fputc_fgetc.cpp)
add_executable(05_test 05_test.cpp)
add_executable(06_fputs_fgets 06_fputs_fgets.cpp)
add_executable(06_test 06_test.cpp)
add_executable(07_buffedsize 07_buffedsize.cpp)
add_executable(08_flbuff_flush 08_flbuff_flush.cpp)
add_executable(09_ffbuff_flush 09_ffbuff_flush.cpp)
add_executable(10_fnbuff_flush 10_fnbuff_flush.cpp)
add_executable(11_fprintf_fscanf 11_fprintf_fscanf.cpp)
add_executable(11_log 11_log.cpp)
add_executable(12_sprintf_snprintf 12_sprintf_snprintf.cpp)
add_executable(13_fread_fwrite_string 13_fread_fwrite_string.cpp)
add_executable(13_fread_fwrite_int 13_fread_fwrite_int.cpp)
add_executable(13_fread_fwrite_struct 13_fread_fwrite_struct.cpp)
add_executable(14_fseek_ftell_rewind 14_fseek_ftell_rewind.cpp)
add_executable(15_open_close 15_open_close.cpp)